test/files/events-neg/no-override.check
no-override.scala:6: error: overriding lazy value e in class C of type scala.events.Event[Unit];
 lazy value e needs `override' modifier
  evt e[Unit] = emptyevent
      ^
one error found
